--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <script type="text/javascript" src="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-initial.min.js"></script>
     <script type="text/javascript" src="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.js"></script>
     <link rel="stylesheet" href="styles.css" type="text/css">
-    <link rel="stylesheet" href="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-site.min.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <noscript>
         <style>
             html {
