--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="/etc.clientlibs/uhcfoundation/clientlibs/clientlib-initial.min.css" type="text/css">
-    <link rel="stylesheet" href="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-initial.min.css" type="text/css">
+    <link rel="stylesheet" href="initial-styles.css" type="text/css">
+    <link rel="stylesheet" href="initial-style.css" type="text/css">
     <link rel="stylesheet" href="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.css" type="text/css">
     <script type="text/javascript" src="/etc.clientlibs/uhcfoundation/clientlibs/clientlib-initial.min.js"></script>
     <script type="text/javascript" src="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-initial.min.js"></script>
