--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="description"
         content="See what UnitedHealthcare can do for you. Explore employer, individual &amp; family, Medicare-Medicaid health insurance plans from UnitedHealthcare." />
     <meta name="template" content="content-page-no-left-nav" />
-    <script>
+    <!-- <script>
         window.init = false;
         window.initAttempts = 0;
 
@@ -33,7 +33,7 @@
             }
         }
         document.addEventListener('DOMContentLoaded', initUHC)
-    </script>
+    </script> -->
     <!-- prettier-ignore-start -->
     <script>
         /* beautify ignore:start */
@@ -68,14 +68,14 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="initial-style.css" type="text/css">
     <link rel="stylesheet" href="initial-styles.css" type="text/css">
+    <link rel="stylesheet" href="initial-style.css" type="text/css">
     <link rel="stylesheet" href="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.css" type="text/css">
     <script type="text/javascript" src="/etc.clientlibs/uhcfoundation/clientlibs/clientlib-initial.min.js"></script>
     <script type="text/javascript" src="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-initial.min.js"></script>
     <script type="text/javascript" src="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.js"></script>
-    <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <noscript>
         <style>
             html {
