--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en">
+<html lang="en" style="display:none">
 
 <head>
     <meta charset="UTF-8" />
@@ -16,12 +16,12 @@
     <meta name="description"
         content="See what UnitedHealthcare can do for you. Explore employer, individual &amp; family, Medicare-Medicaid health insurance plans from UnitedHealthcare." />
     <meta name="template" content="content-page-no-left-nav" />
-    <!-- <script>
+    <script>
         window.init = false;
         window.initAttempts = 0;
 
         function initUHC() {
-            if (initAttempts < 3) {
+            if (initAttempts < 2) {
                 if (init && window.UHC && window.UHC.Main) {
                     window.UHC.init(window.UHC.Main, 'site');
                 } else {
@@ -33,7 +33,7 @@
             }
         }
         document.addEventListener('DOMContentLoaded', initUHC)
-    </script> -->
+    </script>
     <!-- prettier-ignore-start -->
     <script>
         /* beautify ignore:start */
