--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html lang="en" style="display:none">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="google-site-verification" content="S2nsyOIVeEhtwuXrdR5JStWIpu8Co64sW_oV8UrbE4U" />
+    <!-- <meta name="google-site-verification" content="S2nsyOIVeEhtwuXrdR5JStWIpu8Co64sW_oV8UrbE4U" /> -->
     <meta property="og:url" content="https://www.uhc.com/" />
     <meta property="og:title" content="Health insurance plans for individuals &amp; families, employers, medicare" />
     <meta property="og:description"
