--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             /* beautify ignore:end */
     </script>
     <!-- prettier-ignore-end -->
-    <script src="//assets.adobedtm.com/launch-EN9b48c755725743e1aca48496b38b9064.min.js" async
-        onload="window.init=true;"></script>
+    <!-- <script src="//assets.adobedtm.com/launch-EN9b48c755725743e1aca48496b38b9064.min.js" async
+        onload="window.init=true;"></script> -->
     <link rel="icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
