--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="description"
         content="See what UnitedHealthcare can do for you. Explore employer, individual &amp; family, Medicare-Medicaid health insurance plans from UnitedHealthcare." />
     <meta name="template" content="content-page-no-left-nav" />
+    <meta name="robots" content="noindex">
     <!-- <script>
         window.init = false;
         window.initAttempts = 0;
