--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <link rel="stylesheet" href="initial-styles.css" type="text/css">
     <link rel="stylesheet" href="initial-style.css" type="text/css">
     <link rel="stylesheet" href="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.css" type="text/css">
+    <script type="text/javascript" src="initial-scripts.js"></script>
     <script type="text/javascript" src="initial-script.js"></script>
-    <script type="text/javascript" src="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-initial.min.js"></script>
     <script type="text/javascript" src="polyfills-script.js"></script>
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link rel="stylesheet" href="style.css" type="text/css">
