--- a/index.html
+++ b/index.html
@@ -3425,20 +3425,20 @@
                                                             <picture>
                                                                 <!-- Full Width View Source tag -->
                                                                 <source media="(min-width: 769px)"
-                                                                    data-img-path="/content/dam/uhcdotcom/foundation/images/full-width/home-page-mom-son-bike-3840x1086.jpg"
-                                                                    srcset="/content/dam/uhcdotcom/foundation/images/full-width/home-page-mom-son-bike-3840x1086.jpg/jcr:content/renditions/original" />
+                                                                    data-img-path="banner-woman-riding-bike.jpeg"
+                                                                    srcset="banner-woman-riding-bike.jpeg" />
                                                                 <!-- Tablet View Source tag -->
                                                                 <source
                                                                     media="(min-width: 501px) and (max-width: 768px)"
-                                                                    data-tablet-img-path="/content/dam/uhcdotcom/foundation/images/full-width/home-page-mom-son-bike-1536x700-tablet.jpg"
-                                                                    srcset="/content/experience-fragments/uhcdotcom/banners/home_page_fw_banner/health-plans-for-everyone-growning-to-grown/health-plans-for-everyone-growning-to-grown/_jcr_content/root/fullwidthbanner_copy.coreimg.82.1280.jpeg/1595983329709/home-page-mom-son-bike-1536x700-tablet.jpeg" />
+                                                                    data-tablet-img-path="banner-woman-riding-bike.jpeg"
+                                                                    srcset="banner-woman-riding-bike.jpeg" />
                                                                 <!-- Mobile View Source tag -->
                                                                 <source media="(max-width: 500px)"
                                                                     data-mobile-img-path="/content/dam/uhcdotcom/foundation/images/full-width/home-page-mom-son-bike-1000x560-mobile.jpg"
-                                                                    srcset="/content/experience-fragments/uhcdotcom/banners/home_page_fw_banner/health-plans-for-everyone-growning-to-grown/health-plans-for-everyone-growning-to-grown/_jcr_content/root/fullwidthbanner_copy/mobile.coreimg.82.512.jpeg/1595983330875/home-page-mom-son-bike-1000x560-mobile.jpeg" />
+                                                                    srcset="banner-woman-riding-bike.jpeg" />
 
                                                                 <img alt="" class=" lazyload"
-                                                                    data-src="/content/dam/uhcdotcom/foundation/images/full-width/home-page-mom-son-bike-3840x1086.jpg/jcr:content/renditions/original"
+                                                                    data-src="banner-woman-riding-bike.jpeg"
                                                                     property="contentUrl"
                                                                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" />
 
