--- a/index.html
+++ b/index.html
@@ -3434,7 +3434,7 @@
                                                                     srcset="banner-woman-riding-bike.jpeg" />
                                                                 <!-- Mobile View Source tag -->
                                                                 <source media="(max-width: 500px)"
-                                                                    data-mobile-img-path="/content/dam/uhcdotcom/foundation/images/full-width/home-page-mom-son-bike-1000x560-mobile.jpg"
+                                                                    data-mobile-img-path="banner-woman-riding-bike.jpeg"
                                                                     srcset="banner-woman-riding-bike.jpeg" />
 
                                                                 <img alt="" class=" lazyload"
@@ -5516,8 +5516,8 @@
 
 
 
-    <script type="text/javascript" src="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-site.min.js" defer></script>
-    <script type="text/javascript" src="/etc.clientlibs/uhcfoundation/clientlibs/clientlib-site.min.js" defer></script>
+    <script type="text/javascript" src="site-scripts.js" defer></script>
+    <script type="text/javascript" src="site-script.js" defer></script>
 
 
 
@@ -5533,18 +5533,9 @@
 
     <script src="//instant.page/5.1.0" type="module"
         integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
-
-
-
-
-
-
-
-
-
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         _satellite.pageBottom();
-    </script>
+    </script> -->
 
 </body>
 
