--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         content="See what UnitedHealthcare can do for you. Explore employer, individual &amp; family, Medicare-Medicaid health insurance plans from UnitedHealthcare." />
     <meta name="template" content="content-page-no-left-nav" />
     <meta name="robots" content="noindex">
-    <!-- <script>
+    <script>
         window.init = false;
         window.initAttempts = 0;
 
@@ -34,7 +34,7 @@
             }
         }
         document.addEventListener('DOMContentLoaded', initUHC)
-    </script> -->
+    </script>
     <!-- prettier-ignore-start -->
     <script>
         /* beautify ignore:start */
@@ -66,17 +66,27 @@
     <!-- prettier-ignore-end -->
     <!-- <script src="//assets.adobedtm.com/launch-EN9b48c755725743e1aca48496b38b9064.min.js" async
         onload="window.init=true;"></script> -->
-    <link rel="icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
-    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
+    <link rel="icon" type="image/vnd.microsoft.icon"
+        href="https://www.uhc.com/etc/designs/uhcdotcom/resources/favicon.ico" />
+    <link rel="shortcut icon" type="image/vnd.microsoft.icon"
+        href="https://www.uhc.com/etc/designs/uhcdotcom/resources/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="initial-styles.css" type="text/css">
-    <link rel="stylesheet" href="initial-style.css" type="text/css">
-    <link rel="stylesheet" href="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.css" type="text/css">
-    <script type="text/javascript" src="initial-scripts.js"></script>
-    <script type="text/javascript" src="initial-script.js"></script>
-    <script type="text/javascript" src="polyfills-script.js"></script>
-    <link rel="stylesheet" href="styles.css" type="text/css">
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="preload" as="style"
+        href="https://www.uhc.com/etc.clientlibs/uhcfoundation/clientlibs/clientlib-initial.min.css" type="text/css">
+    <link rel="preload" as="style"
+        href="https://www.uhc.com/etc.clientlibs/uhcdotcom/clientlibs/clientlib-initial.min.css" type="text/css">
+    <link rel="preload" as="style"
+        href="https://www.uhc.com/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.css" type="text/css">
+    <script rel="preload" as="script" type="text/javascript"
+        src="https://www.uhc.com/etc.clientlibs/uhcfoundation/clientlibs/clientlib-initial.min.js"></script>
+    <script rel="preload" as="script" type="text/javascript"
+        src="https://www.uhc.com/etc.clientlibs/uhcdotcom/clientlibs/clientlib-initial.min.js"></script>
+    <script rel="preload" as="script" type="text/javascript"
+        src="https://www.uhc.com/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.js"></script>
+    <link rel="preload" as="style"
+        href="https://www.uhc.com/etc.clientlibs/uhcfoundation/clientlibs/clientlib-site.min.css" type="text/css">
+    <link rel="preload" as="style" href="https://www.uhc.com/etc.clientlibs/uhcdotcom/clientlibs/clientlib-site.min.css"
+        type="text/css">
     <noscript>
         <style>
             html {
