--- a/index.html
+++ b/index.html
@@ -66,27 +66,18 @@
     <!-- prettier-ignore-end -->
     <!-- <script src="//assets.adobedtm.com/launch-EN9b48c755725743e1aca48496b38b9064.min.js" async
         onload="window.init=true;"></script> -->
-    <link rel="icon" type="image/vnd.microsoft.icon"
-        href="https://www.uhc.com/etc/designs/uhcdotcom/resources/favicon.ico" />
-    <link rel="shortcut icon" type="image/vnd.microsoft.icon"
-        href="https://www.uhc.com/etc/designs/uhcdotcom/resources/favicon.ico" />
+    <link rel="icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
+    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="preload" as="style"
-        href="https://www.uhc.com/etc.clientlibs/uhcfoundation/clientlibs/clientlib-initial.min.css" type="text/css">
-    <link rel="preload" as="style"
-        href="https://www.uhc.com/etc.clientlibs/uhcdotcom/clientlibs/clientlib-initial.min.css" type="text/css">
-    <link rel="preload" as="style"
-        href="https://www.uhc.com/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.css" type="text/css">
-    <script rel="preload" as="script" type="text/javascript"
-        src="https://www.uhc.com/etc.clientlibs/uhcfoundation/clientlibs/clientlib-initial.min.js"></script>
-    <script rel="preload" as="script" type="text/javascript"
-        src="https://www.uhc.com/etc.clientlibs/uhcdotcom/clientlibs/clientlib-initial.min.js"></script>
-    <script rel="preload" as="script" type="text/javascript"
-        src="https://www.uhc.com/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.js"></script>
-    <link rel="preload" as="style"
-        href="https://www.uhc.com/etc.clientlibs/uhcfoundation/clientlibs/clientlib-site.min.css" type="text/css">
-    <link rel="preload" as="style" href="https://www.uhc.com/etc.clientlibs/uhcdotcom/clientlibs/clientlib-site.min.css"
+    <link rel="preload" as="style" href="initial-styles.css" type="text/css">
+    <link rel="preload" as="style" href="initial-style.css" type="text/css">
+    <link rel="preload" as="style" href="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.css"
         type="text/css">
+    <script rel="preload" as="script" type="text/javascript" src="initial-scripts.js"></script>
+    <script rel="preload" as="script" src="initial-script.js"></script>
+    <script rel="preload" as="script" src="polyfills-script.js"></script>
+    <link rel="preload" as="style" href="styles.css" type="text/css">
+    <link rel="preload" as="style" href="style.css" type="text/css">
     <noscript>
         <style>
             html {
