--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         content="See what UnitedHealthcare can do for you. Explore employer, individual &amp; family, Medicare-Medicaid health insurance plans from UnitedHealthcare." />
     <meta name="template" content="content-page-no-left-nav" />
     <meta name="robots" content="noindex">
-    <script>
+    <!-- <script>
         window.init = false;
         window.initAttempts = 0;
 
@@ -34,7 +34,7 @@
             }
         }
         document.addEventListener('DOMContentLoaded', initUHC)
-    </script>
+    </script> -->
     <!-- prettier-ignore-start -->
     <script>
         /* beautify ignore:start */
