--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="preload" as="style" href="initial-styles.css" type="text/css">
-    <link rel="preload" as="style" href="initial-style.css" type="text/css">
+    <link rel="preload" as="style" href="initial-styles.css" type="text/css" crossorigin>
+    <link rel="preload" as="style" href="initial-style.css" type="text/css" crossorigin>
     <link rel="preload" as="style" href="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.css"
-        type="text/css">
-    <script rel="preload" as="script" type="text/javascript" src="initial-scripts.js"></script>
-    <script rel="preload" as="script" src="initial-script.js"></script>
-    <script rel="preload" as="script" src="polyfills-script.js"></script>
-    <link rel="preload" as="style" href="styles.css" type="text/css">
-    <link rel="preload" as="style" href="style.css" type="text/css">
+        type="text/css" crossorigin>
+    <script rel="preload" as="script" type="text/javascript" src="initial-scripts.js" crossorigin></script>
+    <script rel="preload" as="script" src="initial-script.js" crossorigin></script>
+    <script rel="preload" as="script" src="polyfills-script.js" crossorigin></script>
+    <link rel="preload" as="style" href="styles.css" type="text/css" crossorigin>
+    <link rel="preload" as="style" href="style.css" type="text/css" crossorigin>
     <noscript>
         <style>
             html {
