--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="prefetch" as="style" href="initial-styles.css" type="text/css" crossorigin>
-    <link rel="prefetch" as="style" href="initial-style.css" type="text/css" crossorigin>
-    <link rel="prefetch" as="style" href="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.css"
+    <link rel="stylesheet" as="style" href="initial-styles.css" type="text/css" crossorigin>
+    <link rel="stylesheet as=" style" href="initial-style.css" type="text/css" crossorigin>
+    <link rel="stylesheet" as="style" href="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.css"
         type="text/css" crossorigin>
-    <script rel="prefetch" as="script" type="text/javascript" src="initial-scripts.js" crossorigin></script>
-    <script rel="prefetch" as="script" src="initial-script.js" crossorigin></script>
-    <script rel="prefetch" as="script" src="polyfills-script.js" crossorigin></script>
-    <link rel="prefetch" as="style" href="styles.css" type="text/css" crossorigin>
-    <link rel="prefetch" as="style" href="style.css" type="text/css" crossorigin>
+    <script type="text/javascript" src="initial-scripts.js" crossorigin></script>
+    <script type="text/javascript" src="initial-script.js" crossorigin></script>
+    <script type="text/javascxript" src="polyfills-script.js" crossorigin></script>
+    <link rel="stylesheet" as="style" href="styles.css" type="text/css" crossorigin>
+    <link rel="stylesheet" as="style" href="style.css" type="text/css" crossorigin>
     <noscript>
         <style>
             html {
