--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <script type="text/javascript" src="initial-scripts.js" crossorigin></script>
     <script type="text/javascript" src="initial-script.js" crossorigin></script>
     <script type="text/javascxript" src="polyfills-script.js" crossorigin></script>
-    <link rel="stylesheet" as="style" href="styles.css" type="text/css" crossorigin>
+    <link rel="preload" as="style" href="styles.css" type="text/css" crossorigin>
     <link rel="stylesheet" as="style" href="style.css" type="text/css" crossorigin>
     <noscript>
         <style>
