--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="stylesheet" as="style" href="initial-styles.css" type="text/css" crossorigin>
-    <link rel="stylesheet as=" style" href="initial-style.css" type="text/css" crossorigin>
+    <link rel="stylesheet" as="style" href="initial-style.css" type="text/css" crossorigin>
     <link rel="stylesheet" as="style" href="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.css"
         type="text/css" crossorigin>
     <script type="text/javascript" src="initial-scripts.js" crossorigin></script>
