--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
     <script type="text/javascript" src="initial-scripts.js" crossorigin></script>
     <script type="text/javascript" src="initial-script.js" crossorigin></script>
     <script type="text/javascxript" src="polyfills-script.js" crossorigin></script>
-    <link rel="prefetch" href="styles.css" as="style" crossorigin="anonymous">
+    <link rel="preload" href="styles.css" as="style" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css" type="text/css">
     <link rel="stylesheet" as="style" href="style.css" type="text/css" crossorigin>
     <noscript>
         <style>
