--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     <script type="text/javascxript" src="polyfills-script.js" crossorigin></script>
     <link rel="preload" href="styles.css" as="style">
     <link rel="stylesheet" href="styles.css" type="text/css">
-    <link rel="stylesheet" as="style" href="style.css" type="text/css" crossorigin>
+    <link rel="preload" href="style.css" as="style">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <noscript>
         <style>
             html {
