--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" as="style" href="initial-styles.css" type="text/css" crossorigin>
+    <link rel="preload" href="initial-styles.css" as="style" crossorigin>
+    <link rel="stylesheet" href="initial-styles.css" type="text/css">
     <link rel="stylesheet" as="style" href="initial-style.css" type="text/css" crossorigin>
     <link rel="stylesheet" as="style" href="/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.css"
         type="text/css" crossorigin>
