--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/etc/designs/uhcdotcom/resources/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="stylesheet" href="initial-styles.css" type="text/css">
+<!--    <link rel="stylesheet" href="initial-styles.css" type="text/css"> -->
     <link rel="stylesheet" href="initial-style.css" type="text/css">
     <link rel="stylesheet" href="https://www.uhc.com/etc.clientlibs/uhcdotcom/clientlibs/clientlib-polyfills.min.css"
         type="text/css" crossorigin>
-    <script type="text/javascript" src="initial-scripts.js"></script>
+<!--    <script type="text/javascript" src="initial-scripts.js"></script> -->
     <script type="text/javascript" src="initial-script.js"></script>
     <script type="text/javascxript" src="polyfills-script.js"></script>
-    <link rel="preload" href="styles.css" as="style">
-    <link rel="stylesheet" href="styles.css" type="text/css">
+<!--    <link rel="preload" href="styles.css" as="style"> -->
+<!--    <link rel="stylesheet" href="styles.css" type="text/css"> -->
     <link rel="preload" href="style.css" as="style">
     <link rel="stylesheet" href="style.css" type="text/css">
     <noscript>
@@ -3800,7 +3800,7 @@
         </div>
     </div>
     <script type="text/javascript" src="site-scripts.js" defer></script>
-    <script type="text/javascript" src="site-script.js" defer></script>
+<!--    <script type="text/javascript" src="site-script.js" defer></script> -->
     <script>
         window.UHC.dictionary = {
             "focusTrapVO_Alpha": "Start of menu",
